# MAX30003_linux

./: .gitignore  CMakeLists.txt  toolchain.cmake
inc/: Log_dbg.h  Log_dbg_en.h  MAX30003.h  common_check.h  common_types.h  get_opt_parser.h  spi.h
src/: Log_dbg.c  MAX30003.c  get_opt_parser.c  main.c  spi.c
